--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-15 02:21+0000\n"
+"POT-Creation-Date: 2021-10-18 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1433,11 +1433,11 @@ msgid ""
 "quarkus.oidc.token-path=/protocol/openid-connect/token\n"
 "# JWK set endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/certs\n"
 "quarkus.oidc.jwks-path=/protocol/openid-connect/certs\n"
-"# UserInfo endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
+"# UserInfo endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
 "quarkus.oidc.user-info-path=/protocol/openid-connect/userinfo\n"
-"# Token Introspection endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/token/introspect\n"
+"# Token Introspection endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/token/introspect\n"
 "quarkus.oidc.introspection-path=/protocol/openid-connect/token/introspect\n"
-"# End session endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/logout\n"
+"# End session endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/logout\n"
 "quarkus.oidc.end-session-path=/protocol/openid-connect/logout\n"
 msgstr ""
 
@@ -1527,7 +1527,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:751
 #, no-wrap
 msgid ""
-"# This is a key which will be used to retrieve a secret from the map of credentails returned from CredentialsProvider\n"
+"# This is a key which will be used to retrieve a secret from the map of credentials returned from CredentialsProvider\n"
 "quarkus.oidc.credentials.client-secret.provider.key=mysecret-key\n"
 "# Set it only if more than one CredentialsProvider can be registered\n"
 "quarkus.oidc.credentials.client-secret.provider.name=oidc-credentials-provider\n"
@@ -1568,7 +1568,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:785
 #, no-wrap
 msgid ""
-"# This is a key which will be used to retrieve a secret from the map of credentails returned from CredentialsProvider\n"
+"# This is a key which will be used to retrieve a secret from the map of credentials returned from CredentialsProvider\n"
 "quarkus.oidc.credentials.jwt.secret-provider.key=mysecret-key\n"
 "# Set it only if more than one CredentialsProvider can be registered\n"
 "quarkus.oidc.credentials.jwt.secret-provider.name=oidc-credentials-provider\n"
@@ -1878,7 +1878,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:969
-msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementaion of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
+msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementation of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
 msgstr ""
 
 #. type: Plain text
@@ -1894,7 +1894,7 @@ msgid ""
 "    <artifactId>maven-surefire-plugin</artifactId>\n"
 "    <configuration>\n"
 "        <systemPropertyVariables>\n"
-"            <!-- or, alternativey, configure 'keycloak.version' -->\n"
+"            <!-- or, alternatively, configure 'keycloak.version' -->\n"
 "            <keycloak.docker.image>${keycloak.docker.image}</keycloak.docker.image>\n"
 "            <!--\n"
 "              Disable HTTPS if required:\n"
@@ -2004,7 +2004,7 @@ msgstr "このような場合、プロキシーによって転送された元の
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:1039
-msgid "For example, if your Quarkus endpoint runs in a cluster behind Kubernetes Ingress then a redirect from the OpenId Connect Provider back to this endpoint may not work since the calcuated `redirect_uri` parameter may point to the internal endpoint address. This problem can be resolved with the following configuration:"
+msgid "For example, if your Quarkus endpoint runs in a cluster behind Kubernetes Ingress then a redirect from the OpenId Connect Provider back to this endpoint may not work since the calculated `redirect_uri` parameter may point to the internal endpoint address. This problem can be resolved with the following configuration:"
 msgstr ""
 
 #. type: delimited block -
