--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-30 02:25+0000\n"
+"POT-Creation-Date: 2021-10-18 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -754,7 +754,7 @@ msgstr ""
 msgid ""
 "quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus\n"
 "quarkus.oidc.discovery-enabled=false\n"
-"# Token Introspection endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens/introspect\n"
+"# Token Introspection endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens/introspect\n"
 "quarkus.oidc.introspection-path=/protocol/openid-connect/tokens/introspect\n"
 msgstr ""
 
@@ -928,9 +928,9 @@ msgid ""
 "quarkus.oidc.token-path=/protocol/openid-connect/token\n"
 "# JWK set endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/certs\n"
 "quarkus.oidc.jwks-path=/protocol/openid-connect/certs\n"
-"# UserInfo endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
+"# UserInfo endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
 "quarkus.oidc.user-info-path=/protocol/openid-connect/userinfo\n"
-"# Token Introspection endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens/introspect\n"
+"# Token Introspection endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens/introspect\n"
 "quarkus.oidc.introspection-path=/protocol/openid-connect/tokens/introspect\n"
 msgstr ""
 
@@ -1450,7 +1450,7 @@ msgstr "テストプロジェクトに以下の依存関係を追加します。
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:791
-msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementaion of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
+msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementation of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
 msgstr ""
 
 #. type: Plain text
@@ -1466,7 +1466,7 @@ msgid ""
 "    <artifactId>maven-surefire-plugin</artifactId>\n"
 "    <configuration>\n"
 "        <systemPropertyVariables>\n"
-"            <!-- or, alternativey, configure 'keycloak.version' -->\n"
+"            <!-- or, alternatively, configure 'keycloak.version' -->\n"
 "            <keycloak.docker.image>${keycloak.docker.image}</keycloak.docker.image>\n"
 "            <!--\n"
 "              Disable HTTPS if required:\n"
@@ -1819,7 +1819,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:1037
-msgid "Note that `@TestSecurity` `user` and `roles` attributes are availabe as `TokenIntrospection` `username` and `scope` properties and you can use `io.quarkus.test.security.oidc.TokenIntrospection` to add the additional introspection response properties such as an `email`, etc."
+msgid "Note that `@TestSecurity` `user` and `roles` attributes are available as `TokenIntrospection` `username` and `scope` properties and you can use `io.quarkus.test.security.oidc.TokenIntrospection` to add the additional introspection response properties such as an `email`, etc."
 msgstr ""
 
 #. type: Title ==
@@ -1888,7 +1888,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:1071
-msgid "Nonetheless, setting this propery is encouraged even if the endpoint does not require an access to the remote introspection endpoint. The reasons behind it that `client-id`, if set, can be used to verify the token audience and will also be included in the logs when the token verification fails for the better traceability of the tokens issued to specific clients to be analyzed over a longer period of time."
+msgid "Nonetheless, setting this property is encouraged even if the endpoint does not require an access to the remote introspection endpoint. The reasons behind it that `client-id`, if set, can be used to verify the token audience and will also be included in the logs when the token verification fails for the better traceability of the tokens issued to specific clients to be analyzed over a longer period of time."
 msgstr ""
 
 #. type: Plain text
