--- a/l10n/po/ja_JP/_versions/main/guides/vault-datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vault-datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-10-18 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -417,7 +417,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vault-datasource.adoc:229
-msgid "The two previous approaches work well and are very popular. However they rely on a well known user configured in the application (i.e. the database user), and the security comes from the confidentiality of the password.  If the password was stolen, we would have to change it in the database and in Vault. Regulary rotating passwords is actually a very good practice to limit (in time) the impact of getting the password stolen."
+msgid "The two previous approaches work well and are very popular. However they rely on a well known user configured in the application (i.e. the database user), and the security comes from the confidentiality of the password.  If the password was stolen, we would have to change it in the database and in Vault. Regularly rotating passwords is actually a very good practice to limit (in time) the impact of getting the password stolen."
 msgstr ""
 
 #. type: Plain text
