--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-16 02:17+0000\n"
+"POT-Creation-Date: 2021-10-18 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -471,7 +471,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rest-json.adoc:247
 #, no-wrap
 msgid ""
-"        // Apply all ObjectMapperCustomerizer beans (incl. Quarkus)\n"
+"        // Apply all ObjectMapperCustomizer beans (incl. Quarkus)\n"
 "        for (ObjectMapperCustomizer customizer : customizers) {\n"
 "            customizer.customize(mapper);\n"
 "        }\n"
