--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-10-18 02:25+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -305,7 +305,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:157
-msgid "Here we check if the call is insecured by checking the request user/caller `Principal` against null."
+msgid "Here we check if the call is insecure by checking the request user/caller `Principal` against null."
 msgstr ""
 
 #. type: Plain text
