Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-18 02:25+0000\n"
+"POT-Creation-Date: 2021-10-19 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -101,7 +101,9 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect.adoc:35
-msgid "In this example, we build a very simple microservice which offers three endpoints:"
+#, fuzzy
+#| msgid "In this example, we build a very simple microservice which offers three endpoints:"
+msgid "In this example, we build a very simple microservice which offers two endpoints:"
 msgstr "この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築します:"
 
 #. type: Plain text
