Update .po files

--- a/l10n/po/ja_JP/_guides/README.adoc.po
+++ b/l10n/po/ja_JP/_guides/README.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:04+0000\n"
+"POT-Creation-Date: 2021-10-20 08:04+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -469,5 +469,5 @@ msgstr "{graalvm-flavor} ≪Graalvm-flavor} ≪Graalvm-flavor"
 #. type: Table
 #: upstream/_guides/README.adoc:49
 #, fuzzy, no-wrap
-msgid "The full flavor of GraaVM to use e.g. `19.3.1-java11`. Make sure to use a `java11` version."
+msgid "The full flavor of GraalVM to use e.g. `19.3.1-java11`. Make sure to use a `java11` version."
 msgstr "使用するGraaVMのフルフレーバーは、例えば `19.3.1-java11` .必ず `java11` 版を使用してください。"
