--- a/l10n/po/ja_JP/_guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:16+0000\n"
+"POT-Creation-Date: 2021-10-20 08:03+0000\n"
 "PO-Revision-Date: 2021-04-21 14:52+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -900,7 +900,7 @@ msgstr "式が展開できず、デフォルトが指定されていない場合
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:368
 #, fuzzy
-msgid "Expresions lookups are performed in all config sources. The expression values and expansion values may reside in different config sources."
+msgid "Expressions lookups are performed in all config sources. The expression values and expansion values may reside in different config sources."
 msgstr "エクスプレッションの検索は、すべてのコンフィグ・ソースで実行されます。式の値と展開の値は、異なるコンフィグ・ソースに存在する可能性があります。"
 
 #. type: Title ===
