--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:17+0000\n"
+"POT-Creation-Date: 2021-10-20 08:03+0000\n"
 "PO-Revision-Date: 2021-04-11 18:40+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -485,7 +485,7 @@ msgstr "POMを調べる"
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda.adoc:240
 #, fuzzy
-msgid "There is nothing special about the POM other than the inclusion of the `quarkus-funqy-amazon-lambda` and `quarkus-test-amazon-lambda` extensions as a dependencies.  The extension automatically generates everything you might need for your lambda deployment."
+msgid "There is nothing special about the POM other than the inclusion of the `quarkus-funqy-amazon-lambda` extension as a dependency.  The extension automatically generates everything you might need for your lambda deployment."
 msgstr "POM には、 `quarkus-funqy-amazon-lambda` と `quarkus-test-amazon-lambda` エクステンションが依存関係として含まれていること以外に特別なことは何もありません。このエクステンションは、ラムダのデプロイに必要なものをすべて自動的に生成します。"
 
 #. type: Title ==
