--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-06 08:09+0000\n"
+"POT-Creation-Date: 2021-10-20 08:04+0000\n"
 "PO-Revision-Date: 2021-04-25 23:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1356,11 +1356,11 @@ msgid ""
 "quarkus.oidc.token-path=/protocol/openid-connect/token\n"
 "# JWK set endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/certs\n"
 "quarkus.oidc.jwks-path=/protocol/openid-connect/certs\n"
-"# UserInfo endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
+"# UserInfo endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
 "quarkus.oidc.user-info-path=/protocol/openid-connect/userinfo\n"
-"# Token Introspection endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/token/introspect\n"
+"# Token Introspection endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/token/introspect\n"
 "quarkus.oidc.introspection-path=/protocol/openid-connect/token/introspect\n"
-"# End session endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/logout\n"
+"# End session endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/logout\n"
 "quarkus.oidc.end-session-path=/protocol/openid-connect/logout\n"
 msgstr ""
 
@@ -1456,7 +1456,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:680
 #, no-wrap
 msgid ""
-"# This is a key which will be used to retrieve a secret from the map of credentails returned from CredentialsProvider\n"
+"# This is a key which will be used to retrieve a secret from the map of credentials returned from CredentialsProvider\n"
 "quarkus.oidc.credentials.client-secret.provider.key=mysecret-key\n"
 "# Set it only if more than one CredentialsProvider can be registered\n"
 "quarkus.oidc.credentials.client-secret.provider.name=oidc-credentials-provider\n"
@@ -1499,7 +1499,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:714
 #, no-wrap
 msgid ""
-"# This is a key which will be used to retrieve a secret from the map of credentails returned from CredentialsProvider\n"
+"# This is a key which will be used to retrieve a secret from the map of credentials returned from CredentialsProvider\n"
 "quarkus.oidc.credentials.jwt.secret-provider.key=mysecret-key\n"
 "# Set it only if more than one CredentialsProvider can be registered\n"
 "quarkus.oidc.credentials.jwt.secret-provider.name=oidc-credentials-provider\n"
@@ -1828,7 +1828,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:898
 #, fuzzy
-msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementaion of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
+msgid "which provides `io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - an implementation of `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` which starts a Keycloak container."
 msgstr "`io.quarkus.test.keycloak.server.KeycloakTestResourceLifecycleManager` - Keycloakコンテナを起動する `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` の実装を提供しています。"
 
 #. type: Plain text
@@ -1845,7 +1845,7 @@ msgid ""
 "    <artifactId>maven-surefire-plugin</artifactId>\n"
 "    <configuration>\n"
 "        <systemPropertyVariables>\n"
-"            <!-- or, alternativey, configure 'keycloak.version' -->\n"
+"            <!-- or, alternatively, configure 'keycloak.version' -->\n"
 "            <keycloak.docker.image>${keycloak.docker.image}</keycloak.docker.image>\n"
 "            <!--\n"
 "              Disable HTTPS if required:\n"
@@ -1963,7 +1963,7 @@ msgstr "このような場合、プロキシーによって転送された元の
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:968
 #, fuzzy
-msgid "For example, if your Quarkus endpoint runs in a cluster behind Kubernetes Ingress then a redirect from the OpenId Connect Provider back to this endpoint may not work since the calcuated `redirect_uri` parameter may point to the internal endpoint address. This problem can be resolved with the following configuration:"
+msgid "For example, if your Quarkus endpoint runs in a cluster behind Kubernetes Ingress then a redirect from the OpenId Connect Provider back to this endpoint may not work since the calculated `redirect_uri` parameter may point to the internal endpoint address. This problem can be resolved with the following configuration:"
 msgstr "例えば、QuarkusのエンドポイントがKubernetes Ingressの背後にあるクラスタで動作している場合、OpenId Connect Providerからこのエンドポイントに戻るリダイレクトは、calcuated `redirect_uri` パラメータが内部エンドポイントのアドレスを指している可能性があるため、機能しない可能性があります。この問題は、以下の設定で解決できます。"
 
 #. type: delimited block -
