--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:16+0000\n"
+"POT-Creation-Date: 2021-10-20 08:03+0000\n"
 "PO-Revision-Date: 2021-07-19 11:44+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -934,8 +934,8 @@ msgstr ""
 #: upstream/_guides/cache.adoc:552
 #, no-wrap
 msgid ""
-"    @CacheResult(name = \"foo\")\n"
-"    private Integer callRemote(int val)  {\n"
+"    @CacheResult(cacheName = \"foo\")\n"
+"    public Integer callRemote(int val)  {\n"
 msgstr ""
 
 #. type: delimited block -
@@ -1005,8 +1005,8 @@ msgstr ""
 #: upstream/_guides/cache.adoc:588
 #, no-wrap
 msgid ""
-"   @CacheResult(name = \"foo\")\n"
-"   private Integer callRemote(int val) throws Exception { // <2>\n"
+"   @CacheResult(cacheName = \"foo\")\n"
+"   public Integer callRemote(int val) throws Exception { // <2>\n"
 msgstr ""
 
 #. type: delimited block -
