--- a/l10n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-json.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-06 08:09+0000\n"
+"POT-Creation-Date: 2021-10-20 08:04+0000\n"
 "PO-Revision-Date: 2021-04-11 18:46+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -471,7 +471,7 @@ msgstr ""
 #: upstream/_guides/rest-json.adoc:247
 #, no-wrap
 msgid ""
-"        // Apply all ObjectMapperCustomerizer beans (incl. Quarkus)\n"
+"        // Apply all ObjectMapperCustomizer beans (incl. Quarkus)\n"
 "        for (ObjectMapperCustomizer customizer : customizers) {\n"
 "            customizer.customize(mapper);\n"
 "        }\n"
