--- a/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:17+0000\n"
+"POT-Creation-Date: 2021-10-20 08:04+0000\n"
 "PO-Revision-Date: 2021-03-09 22:07+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -218,7 +218,9 @@ msgstr "これは、公開ページであっても、無効なクレデンシャ
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:116
-msgid "If you disable proactive authentication then the authentication process will only be run when an identity is requested, either because there are security rules that requires the user to be authenticated, or due to programatic access to the current identity."
+#, fuzzy
+#| msgid "If you disable proactive authentication then the authentication process will only be run when an identity is requested, either because there are security rules that requires the user to be authenticated, or due to programatic access to the current identity."
+msgid "If you disable proactive authentication then the authentication process will only be run when an identity is requested, either because there are security rules that requires the user to be authenticated, or due to programmatic access to the current identity."
 msgstr "プロアクティブ認証を無効にすると、認証プロセスは ID が要求されたときにのみ実行されます。これは、ユーザーの認証を必要とするセキュリティー ルールがある場合、または現在の ID へのプログラム的なアクセスがある場合のいずれかです。"
 
 #. type: Plain text
