Add machine translation

--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -761,14 +761,15 @@ msgstr "link:dev-ui[Dev UIの]チュートリアルに従うとともに、 `ext
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-dev-services.adoc:302
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Non Application Root Path Considerations"
-msgstr ""
+msgstr "非アプリケーションのルートパスに関する考察"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:305
+#, fuzzy
 msgid "This document refers to the `http://localhost:8080/q/dev` Dev UI URL in several places where `q` is a default non application root path. If you customize `quarkus.http.root-path` and/or `quarkus.http.non-application-root-path` properties then replace `q` accordingly, please see https://quarkus.io/blog/path-resolution-in-quarkus/[Path Resolution in Quarkus] for more information."
-msgstr ""
+msgstr "このドキュメントでは `&lt;a href=\"http://localhost:8080/q/dev\" class=\"bare\"&gt;http://localhost:8080/q/dev&lt;/a&gt;`このドキュメントでは、いくつかの箇所でDev UIのURLを参照していますが、そこでは `q` がアプリケーション以外のデフォルトのルートパスになっています。 `quarkus.http.root-path` や `quarkus.http.non-application-root-path` のプロパティをカスタマイズしている場合は、 `q` を適宜置き換えてください。詳しくは、 link:https://quarkus.io/blog/path-resolution-in-quarkus/[QuarkusのPath Resolution]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-dev-services.adoc:306
