--- a/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
@@ -721,8 +721,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:313
+#, fuzzy
 msgid "If you use the Mutiny-variant of Vert.x, be aware that the `deployVerticle` method returns a `Uni`, and you would need to trigger a subscription to make the actual deployment."
-msgstr ""
+msgstr "Vert.x の Mutiny バリアントを使用する場合、 `deployVerticle` メソッドは `Uni` を返すため、実際のデプロイメントを行うにはサブスクリプションをトリガーする必要があることに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:315
@@ -732,19 +733,21 @@ msgstr "アプリケーションの初期化時にバーティクルを配置す
 
 #. type: Title ===
 #: upstream/_guides/vertx-reference.adoc:316
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using @ApplicationScoped Beans as Verticle"
-msgstr ""
+msgstr "バーチクルとしての@ApplicationScoped Beansの使用"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:322
+#, fuzzy
 msgid "In general, Vert.x verticles are not CDI beans.  And so cannot use injection.  However, in Quarkus, you can deploy verticles as beans.  Note that in this case, CDI (Arc in Quarkus) is responsible for creating the instance."
-msgstr ""
+msgstr "一般的に、Vert.xのバーティクルはCDIビーンズではありません。そのため、インジェクションは使用できません。しかし、QuarkusではVerticleをBeanとして配置することができます。この場合、CDI（QuarkusではArc）がインスタンスの作成を担当することに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:324
+#, fuzzy
 msgid "The following snippet provides an example:"
-msgstr ""
+msgstr "次のスニペットはその例です。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx-reference.adoc:328
@@ -868,13 +871,15 @@ msgstr "そして、バーティクルインスタンスをデプロイします
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:388
+#, fuzzy
 msgid "When using `@ApplicationScoped`, you will get a single instance for your verticle.  Having multiple instances of verticles can be helpful to share the load among them.  Each of them will be associated with a different I/O thread (Vert.x event loop)."
-msgstr ""
+msgstr "`@ApplicationScoped` を使用する場合、バーティクルのインスタンスは1つになります。頂点の複数のインスタンスを持つことは、それらの間で負荷を共有するのに役立ちます。各々のインスタンスは、異なるI/Oスレッド（Vert.xイベントループ）に関連付けられます。"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:390
+#, fuzzy
 msgid "To deploy multiple instances of your verticle, use the `@Dependent` scope instead of `@ApplicationScoped`:"
-msgstr ""
+msgstr "バーティクルの複数のインスタンスを展開するには、 `@ApplicationScoped` の代わりに `@Dependent` スコープを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx-reference.adoc:394
@@ -967,8 +972,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:446
+#, fuzzy
 msgid "The `init` method receives an `Instance<MyVerticle>`.  Then, you pass a supplier to the `deployVerticle` method.  The supplier is just calling the `get()` method.  Thanks to the `@Dependent` scope, it returns a new instance on every call.  Finally, you pass the desired number of instances to the `DeploymentOptions`, such as two in the previous example.  It will call the supplier twice, which will create two instances of your verticle."
-msgstr ""
+msgstr "`init` メソッドは、 `Instance&amp;lt;MyVerticle&amp;gt;` を受け取ります。そして、 `deployVerticle` メソッドにサプライヤーを渡します。サプライヤーは `get()` メソッドを呼び出すだけです。 `@Dependent` スコープのおかげで、呼び出すたびに新しいインスタンスが返されます。最後に、希望する数のインスタンスを `DeploymentOptions` に渡します。例えば、前の例では2つです。はサプライヤーを2回呼び出し、頂点の2つのインスタンスを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/vertx-reference.adoc:448
