--- a/l10n/po/ja_JP/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-20 09:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-10-21 09:51+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.3.1.Final released - Maintenance release'\n"
@@ -44,72 +44,62 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released Quarkus 2.3.1.Final, a maintenance release for our 2.3 release train containing bugfixes and documentation improvements."
 msgstr "本日、Quarkus 2.3.1.Finalをリリースしました。このリリースは、2.3リリーストレインのメンテナンスリリースで、バグフィックスとドキュメントの改善を含んでいます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.3."
-msgstr "すでに2.3をお使いの方も安心してアップグレードできます。"
+msgstr "これは、すでに2.3をお使いの方にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 2.3 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.3[2.3 migration guide]."
-msgstr "すでに2.3を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.3[2.3移行ガイド]を参照してください。"
+msgstr "まだ2.3を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.3[2.3移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Full changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.3.1.Final[the full changelog of 2.3.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.3.1.Final[2.3.1.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.3.1.Final[2.3.1.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に働きませんか？"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:23
-#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:25
-#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:27
-#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:28
-#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:29
-#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc:30
-#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
